--- a/index.html
+++ b/index.html
@@ -28,17 +28,26 @@
                     <ul class="slots">
                         <li class="slot">
                             <div class="slot-number">
-                                <img src="./img/diamond-prize.svg" alt="">
+                                <!-- <img src="./img/diamond-prize.svg" alt=""> -->
+                                <h3>
+                                    <span id="number1" class="number"></span>
+                                </h3>
                             </div>
                         </li>
                         <li class="slot">
                              <div class="slot-number">
-                                <img src="./img/diamond-prize.svg" alt="">
+                                <!-- <img src="./img/diamond-prize.svg" alt=""> -->
+                                <h3>
+                                    <span id="number2" class="number"></span>
+                                </h3>
                             </div>
                         </li>
                         <li class="slot">
                              <div class="slot-number">
-                                <img src="./img/diamond-prize.svg" alt="">
+                                <!-- <img src="./img/diamond-prize.svg" alt=""> -->
+                                <h3>
+                                    <span id="number3" class="number"></span>
+                                </h3>
                             </div>
                         </li>
                     </ul>
@@ -49,7 +58,7 @@
             <div class="awards">
             </div>
             <div>
-                <a class="quaySoButon" onclick="checkNumber()">Quay số</a>
+                <a class="quaySoButon">Quay số</a>
             </div>
         </div>
 
@@ -61,5 +70,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
+    <script src="./rollNumber.js"></script>
   </body>
 </html>
